                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 19-03-2005 changed: Games bookmark defaults to F: now (so that the <default> tag works correctly)
  - 19-03-2005 fixed: Progress control didn't offset from the window's <posx>, <posy> coordinates.  Skins that have worked around this bug need fixing.
  - 19-03-2005 fixed: Subtitle size in Hardware overlays mode.
  - 19-03-2005 added: <autodetectFG> tag to XBoxMediaCenter.xml.  Set to false if you have an old bios that causes a crash on autodetection.
  - 19-03-2005 fixed: Overlays dim on screensaver activate while video is paused.
  - 19-03-2005 fixed: MusicPlayer and VideoPlayer labels only return something if there is the appropriate media type playing.
  - 18-03-2005 fixed: Play action in My Music Nav does not interfere with unpausing, or returning playback speed to 1
  - 18-03-2005 added: When music is paused, the play button will unpause
  - 18-03-2005 fixed: AddItemToPlayList crashing in XBMChttp.cpp and XBMCweb.cpp following changes to FileItem.cpp
  - 18-03-2005 added: checkmarkexample.py & listitemexample.py sample python scripts to xbmc\scripts - thanks to gimblefoot
  - 18-03-2005 added: [ 1163487 ] Expose more CGUIListItem methods to python xbmcgui.ListItem, setLabel2() - set the second label on the list item, getLabel2() - get the second label from the list item, setThumbnailImage() - set the thumbnail image for the list item, setIconImage() - set the icon image for the list item, keyword parameters support for ListItem constructor. - thanks to gimblefoot
  - 18-03-2005 fixed: crash on startup if kai is connected
  - 17-03-2005 fixed: Song info is displayed upon song change when in a visualisation